tests/testFiles/semanticErrors/giveoptionalparamwrongtype.meme
you: add(a = 4)
me, an intellectual: {
}

add("hi");
